--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@supabase/supabase-js": "^2.50.0",
     "date-fns": "^4.1.0",
-    "next": "14.2.30",
+    "next": "^15.3.4",
     "react": "^18",
     "react-dom": "^18"
   },
